Start of re-write

--- a/_lanyware/linux/gamesvr-csgo-tourney/Dockerfile
+++ b/_lanyware/linux/gamesvr-csgo-tourney/Dockerfile
@@ -2,41 +2,41 @@ FROM ll/gamesvr-csgo
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV SVR_MAINTAINER="Laclede's LAN" SERVER_NAME="ll/gamesvr-csgo-tourney"
+ENV DEBIAN_FRONTEND="noninteractive" SERVER_NAME="ll/gamesvr-csgo-tourney" 
 
 COPY . /gamesvr/csgo/
 
 #Get and stage from gamesvr GitHub Repo "gamesvr-srcds-metamod.linux"
 RUN cd `mktemp -d` && \
-	git clone git://github.com/LacledesLAN/gamesvr-srcds-metamod.linux && \
-	rm -rf *.git && \
-	cd `ls -A | head -1` && \
-	rm -f *.md && \
-	cp -r * /gamesvr/csgo/csgo/
-	
+    git clone git://github.com/LacledesLAN/gamesvr-srcds-metamod.linux && \
+    rm -rf *.git && \
+    cd `ls -A | head -1` && \
+    rm -f *.md && \
+    cp -r * /gamesvr/csgo/csgo/
+
 #Get and stage from gamesvr GitHub Repo "gamesvr-srcds-sourcemod.linux"
 RUN cd `mktemp -d` && \
-	git clone git://github.com/LacledesLAN/gamesvr-srcds-sourcemod.linux && \
-	rm -rf *.git && \
-	cd `ls -A | head -1` && \
-	rm -f *.md && \
-	cp -r * /gamesvr/csgo/csgo/
+    git clone git://github.com/LacledesLAN/gamesvr-srcds-sourcemod.linux && \
+    rm -rf *.git && \
+    cd `ls -A | head -1` && \
+    rm -f *.md && \
+    cp -r * /gamesvr/csgo/csgo/
 
 #Get and stage from gamesvr GitHub Repo "gamesvr-srcds-csgo"
 RUN cd `mktemp -d` && \
-	git clone git://github.com/LacledesLAN/gamesvr-srcds-csgo && \
-	rm -rf *.git && \
-	cd `ls -A | head -1` && \
-	rm -f *.md && \
-	cp -r * /gamesvr/csgo/
-	
+    git clone git://github.com/LacledesLAN/gamesvr-srcds-csgo && \
+    rm -rf *.git && \
+    cd `ls -A | head -1` && \
+    rm -f *.md && \
+    cp -r * /gamesvr/csgo/
+
 #Get and stage from gamesvr GitHub Repo "gamesvr-srcds-csgo-tourney"	
 RUN cd `mktemp -d` && \
-	git clone git://github.com/LacledesLAN/gamesvr-srcds-csgo-tourney && \
-	rm -rf *.git && \
-	cd `ls -A | head -1` && \
-	rm -f *.md && \
-	cp -r * /gamesvr/csgo/
+    git clone git://github.com/LacledesLAN/gamesvr-srcds-csgo-tourney && \
+    rm -rf *.git && \
+    cd `ls -A | head -1` && \
+    rm -f *.md && \
+    cp -r * /gamesvr/csgo/
 
 # Clean out tmp directory
 RUN rm -fr /tmp/*
