--- a/_lanyware/linux/gamesvr-tf2/Dockerfile
+++ b/_lanyware/linux/gamesvr-tf2/Dockerfile
@@ -2,16 +2,15 @@ FROM ll/gamesvr
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV SERVER_MAINTAINER "Laclede's LAN"
-ENV SERVER_NAME "ll/gamesvr-tf2"
+ENV DEBIAN_FRONTEND="noninteractive" SERVER_NAME="ll/gamesvr-tf2" 
 
 COPY . /gamesvr/tf2/
 
 # Install Counter-Strike: Global-Offensive using SteamCMD
 RUN mkdir -p /gamesvr/tf2 && \
-	bash /gamesvr/_util/steamcmd/steamcmd.sh +login anonymous +force_install_dir /gamesvr/tf2 +app_update 232250 +quit -validate && \
-	sleep 3 `#Give steamcmd time to any handles to files in /tmp/#` && \
-	rm -fr /tmp/* `#Clean out temp directory to save space#`
+    bash /gamesvr/_util/steamcmd/steamcmd.sh +login anonymous +force_install_dir /gamesvr/tf2 +app_update 232250 +quit -validate && \
+    sleep 3 `#Give steamcmd time to any handles to files in /tmp/#` && \
+    rm -fr /tmp/* `#Clean out temp directory to save space#`
 
 WORKDIR /gamesvr/tf2/
 
