--- a/_lanyware/linux/gamesvr/Dockerfile
+++ b/_lanyware/linux/gamesvr/Dockerfile
@@ -2,24 +2,27 @@ FROM ubuntu:latest
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV SERVER_MAINTAINER "Laclede's LAN"
-ENV SERVER_NAME "ll/gamesvr"
+ENV DEBIAN_FRONTEND="noninteractive" SERVER_NAME="ll/gamesvr" 
 
 COPY . /gamesvr/
 
 # Install required packages and clean up unused dependencies
-RUN apt-get update && \
-	apt-get install -y --no-install-recommends curl git libc6-i386 lib32gcc1 lib32stdc++6 lib32tinfo5 lib32z1 tar wget && \
-	apt-get -y clean && \
-	apt-get -y autoremove && \
-	rm -rf /var/lib/apt/lists/* && \
-	`##Stage SteamCMD to /gamesvr/_util/steamcmd/##` && \
-	mkdir -p /gamesvr/_util/steamcmd  && \
-	wget -qO- -r --tries=10 --waitretry=20 --output-document=tmp.tar.gz http://media.steampowered.com/installer/steamcmd_linux.tar.gz && \
-	tar -xvzf tmp.tar.gz -C /gamesvr/_util/steamcmd/ && \
-	rm tmp.tar.gz && \
-	sh /gamesvr/_util/steamcmd/steamcmd.sh +quit && \
-	sleep 2 && \
-	rm -fr /tmp/*
+RUN `##Set up container enviorment##` && \
+    useradd  -m --home /gamesvr/ container && \
+    `##Install dependencies##` && \
+    apt-get update && \
+    apt-get install -y --no-install-recommends curl git libc6-i386 lib32gcc1 lib32stdc++6 lib32tinfo5 lib32z1 tar wget && \
+    apt-get -y clean && \
+    apt-get -y autoremove && \
+    rm -rf /var/lib/apt/lists/* && \
+    sleep 2 && \
+    rm -fr /tmp/* && \
+    rm /gamesvr/Dockerfile -f
 
-WORKDIR /gamesvr/
+USER container
+
+ENV HOME /gamesvr
+
+WORKDIR /gamesvr
+
+CMD ["/bin/bash"]
