--- a/_lanyware/linux/gamesvr-csgo/Dockerfile
+++ b/_lanyware/linux/gamesvr-csgo/Dockerfile
@@ -2,14 +2,15 @@ FROM ll/gamesvr
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV DEBIAN_FRONTEND="noninteractive" SERVER_NAME="ll/gamesvr-csgo" 
+ENV DEBIAN_FRONTEND="noninteractive" HOME="/gamesvr/csgo/" SERVER_NAME="ll/gamesvr-csgo" 
 
-COPY . /gamesvr/.csgo/
+COPY . /gamesvr/csgo/
 
-# Install Counter-Strike: Global-Offensive using SteamCMD
-RUN rm /gamesvr/Dockerfile -f
+USER container
 
-WORKDIR /gamesvr/.csgo/
+WORKDIR /gamesvr/csgo/
+
+CMD ["/bin/bash"]
 
 #TODO:
-#get /gamesvr/.csgo/ <=- ftp.content.lan/fastDownloads/csgo/
+#get /gamesvr/csgo/ <=- ftp.content.lan/fastDownloads/csgo/
