--- a/_lanyware/linux/gamesvr-csgo-tourney/Dockerfile
+++ b/_lanyware/linux/gamesvr-csgo-tourney/Dockerfile
@@ -4,10 +4,10 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
 ENV DEBIAN_FRONTEND="noninteractive" SERVER_NAME="ll/gamesvr-csgo-tourney" 
 
-COPY . /gamesvr/.csgo/
+COPY . /gamesvr/csgo/
 
-RUN rm /gamesvr/.csgo/Dockerfile -f && \
-    rm /gamesvr/.csgo/.dockerignore -f
+RUN rm -f /gamesvr/csgo/Dockerfile && \
+    rm -f /gamesvr/csgo/.dockerignore
 
 #Get and stage from gamesvr GitHub Repo "gamesvr-srcds-metamod.linux"
 RUN cd `mktemp -d` && \
@@ -46,6 +46,6 @@ RUN rm -fr /tmp/*
 
 USER container
 
-ENV HOME /gamesvr/.csgo/
+ENV HOME /gamesvr/csgo/
 
 WORKDIR /gamesvr/csgo/
