--- a/_lanyware/linux/gamesvr-csgo-freeplay/Dockerfile
+++ b/_lanyware/linux/gamesvr-csgo-freeplay/Dockerfile
@@ -4,12 +4,12 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
 ENV DEBIAN_FRONTEND="noninteractive" HOME="/gamesvr/csgo/" SERVER_NAME="ll/gamesvr-csgo-freeplay"
 
-COPY . /gamesvr/csgo/
-
 USER root
 
-RUN rm -f /gamesvr/csgo-freeplay/Dockerfile && \
-    rm -f /gamesvr/csgo-freeplay/.dockerignore
+COPY . /gamesvr/csgo/
+
+RUN rm -f /gamesvr/csgo/Dockerfile && \
+    rm -f /gamesvr/csgo/.dockerignore
 
 USER container
 
