--- a/_lanyware/linux/gamesvr-tf2/Dockerfile
+++ b/_lanyware/linux/gamesvr-tf2/Dockerfile
@@ -2,19 +2,18 @@ FROM ll/gamesvr
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV DEBIAN_FRONTEND="noninteractive" SERVER_NAME="ll/gamesvr-tf2" 
+ENV DEBIAN_FRONTEND="noninteractive" HOME="/gamesvr/tf2/" SERVER_NAME="ll/gamesvr-tf2"
+
+USER root
 
 COPY . /gamesvr/tf2/
 
-# Install Counter-Strike: Global-Offensive using SteamCMD
-RUN mkdir -p /gamesvr/tf2 && \
-    bash /gamesvr/_util/steamcmd/steamcmd.sh +login anonymous +force_install_dir /gamesvr/tf2 +app_update 232250 +quit -validate && \
-    sleep 3 `#Give steamcmd time to any handles to files in /tmp/#` && \
-    rm -fr /tmp/* `#Clean out temp directory to save space#`
+RUN rm -f /gamesvr/hl2dm/Dockerfile && \
+    rm -f /gamesvr/hl2dm/.dockerignore
+
+USER container
 
 WORKDIR /gamesvr/tf2/
 
 #TODO:
 #get ftp contents -=> content.lan/fastDownloads/tf2/
-
-#gamesvr-tf2
