Removed DEBIAN_FRONTEND="noninteractive" from all gamesvr Dockerfiles

--- a/_lanyware/linux/gamesvr-csgo-freeplay/Dockerfile
+++ b/_lanyware/linux/gamesvr-csgo-freeplay/Dockerfile
@@ -2,15 +2,11 @@ FROM ll/gamesvr-csgo
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV DEBIAN_FRONTEND="noninteractive" HOME="/gamesvr/csgo/" SERVER_NAME="ll/gamesvr-csgo-freeplay"
-
-USER root
+ENV HOME="/gamesvr/csgo/" SERVER_NAME="ll/gamesvr-csgo-freeplay"
 
 COPY . /gamesvr/csgo/
 
 RUN rm -f /gamesvr/csgo/Dockerfile && \
     rm -f /gamesvr/csgo/.dockerignore
-
-USER container
 
 WORKDIR /gamesvr/csgo/
