--- a/_lanyware/linux/gamesvr-csgo/Dockerfile
+++ b/_lanyware/linux/gamesvr-csgo/Dockerfile
@@ -2,13 +2,9 @@ FROM ll/gamesvr
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV DEBIAN_FRONTEND="noninteractive" HOME="/gamesvr/csgo/" SERVER_NAME="ll/gamesvr-csgo" 
-
-USER root
+ENV HOME="/gamesvr/csgo/" SERVER_NAME="ll/gamesvr-csgo" 
 
 COPY . /gamesvr/csgo/
-
-USER container
 
 WORKDIR /gamesvr/csgo/
 
