Removed DEBIAN_FRONTEND="noninteractive" from all gamesvr dockerfiles

--- a/_lanyware/linux/gamesvr-tf2-download/Dockerfile
+++ b/_lanyware/linux/gamesvr-tf2-download/Dockerfile
@@ -2,7 +2,7 @@ FROM ll/gamesvr-tf2
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV DEBIAN_FRONTEND="noninteractive" SERVER_NAME="ll/gamesvr-tf2-download" 
+ENV SERVER_NAME="ll/gamesvr-tf2-download" 
 
 COPY . /gamesvr/tf2/
 
