--- a/_lanyware/linux/gamesvr-tf2-freeplay/Dockerfile
+++ b/_lanyware/linux/gamesvr-tf2-freeplay/Dockerfile
@@ -2,15 +2,11 @@ FROM ll/gamesvr-tf2
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV DEBIAN_FRONTEND="noninteractive" HOME="/gamesvr/tf2/" SERVER_NAME="ll/gamesvr-tf2-freeplay" 
-
-USER root
+ENV HOME="/gamesvr/tf2/" SERVER_NAME="ll/gamesvr-tf2-freeplay" 
 
 COPY . /gamesvr/tf2/
 
 RUN rm -f /gamesvr/tf2/Dockerfile && \
     rm -f /gamesvr/tf2/.dockerignore
-
-USER container
 
 WORKDIR /gamesvr/tf2/
