--- a/_lanyware/linux/gamesvr-hl2dm-freeplay/Dockerfile
+++ b/_lanyware/linux/gamesvr-hl2dm-freeplay/Dockerfile
@@ -2,15 +2,11 @@ FROM ll/gamesvr-hl2dm
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV DEBIAN_FRONTEND="noninteractive" HOME="/gamesvr/hl2dm/" SERVER_NAME="ll/gamesvr-hl2dm-freeplay"
-
-USER root
+ENV HOME="/gamesvr/hl2dm/" SERVER_NAME="ll/gamesvr-hl2dm-freeplay"
 
 COPY . /gamesvr/hl2dm/
 
 RUN rm -f /gamesvr/hl2dm/Dockerfile && \
     rm -f /gamesvr/hl2dm/.dockerignore
-
-USER container
 
 WORKDIR /gamesvr/hl2dm/
