--- a/_lanyware/linux/gamesvr-hl2dm/Dockerfile
+++ b/_lanyware/linux/gamesvr-hl2dm/Dockerfile
@@ -2,16 +2,12 @@ FROM ll/gamesvr
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV DEBIAN_FRONTEND="noninteractive" HOME="/gamesvr/hl2dm/" SERVER_NAME="ll/gamesvr-hl2dm" 
-
-USER root
+ENV HOME="/gamesvr/hl2dm/" SERVER_NAME="ll/gamesvr-hl2dm" 
 
 COPY . /gamesvr/hl2dm/
 
 RUN rm -f /gamesvr/hl2dm/Dockerfile && \
     rm -f /gamesvr/hl2dm/.dockerignore
-
-USER container
 
 WORKDIR /gamesvr/hl2dm/
 
