--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
-# Linux Files
+# Linux Specific Files
 *.sh eol=lf
 /_lanyware/linux/*/Dockerfile eol=lf
 /_lanyware/linux/*/.dockerignore eol=lf
@@ -9,3 +9,5 @@
 # Windows Specific Files
 *.bat eol=crlf
 *.ps1 eol=crlf
+/_lanyware/windows/*/Dockerfile eol=crlf
+/_lanyware/windows/*/.dockerignore eol=crlf
