--- a/_lanyware/linux/gamesvr-hl2dm-freeplay/Dockerfile
+++ b/_lanyware/linux/gamesvr-hl2dm-freeplay/Dockerfile
@@ -4,9 +4,11 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
 ENV HOME="/gamesvr/hl2dm/" SERVER_NAME="ll/gamesvr-hl2dm-freeplay"
 
-COPY . /gamesvr/hl2dm/
+COPY ./files/ /gamesvr/hl2dm/
 
-RUN rm -f /gamesvr/hl2dm/Dockerfile && \
-    rm -f /gamesvr/hl2dm/.dockerignore
+RUN `##Set up container enviorment##` && \
+    useradd  -m --home /gamesvr/hl2dm/ gamesvr-hl2dm-freeplay -c "Docker container user for ll/gamesvr-hl2dm-freeplay"
+
+USER gamesvr-hl2dm-freeplay
 
 WORKDIR /gamesvr/hl2dm/
