--- a/_lanyware/linux/gamesvr-hl2dm/Dockerfile
+++ b/_lanyware/linux/gamesvr-hl2dm/Dockerfile
@@ -4,10 +4,7 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
 ENV HOME="/gamesvr/hl2dm/" SERVER_NAME="ll/gamesvr-hl2dm" 
 
-COPY . /gamesvr/hl2dm/
-
-RUN rm -f /gamesvr/hl2dm/Dockerfile && \
-    rm -f /gamesvr/hl2dm/.dockerignore
+COPY ./files/ /gamesvr/hl2dm/
 
 WORKDIR /gamesvr/hl2dm/
 
