--- a/_lanyware/linux/gamesvr/Dockerfile
+++ b/_lanyware/linux/gamesvr/Dockerfile
@@ -5,11 +5,9 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 ENV HOME="/gamesvr/" SERVER_NAME="ll/gamesvr"
 
 # Install required packages and clean up unused dependencies
-RUN `##Set up container enviorment##` && \
-    useradd  -m --home /gamesvr/ container -c "Docker image user" && \
-    `##Install dependencies##` && \
+RUN `##Install dependencies##` && \
     apt-get update && \
-    apt-get install -y --no-install-recommends tree libc6-i386 lib32gcc1 lib32stdc++6 lib32tinfo5 lib32z1 && \
+    apt-get install -y libc6-i386 lib32gcc1 lib32stdc++6 lib32tinfo5 lib32z1 && \
     apt-get -y autoremove && \
     apt-get -y clean && \
     rm -rf /var/lib/apt/lists/* && \
@@ -17,7 +15,7 @@ RUN `##Set up container enviorment##` && \
     rm -f /gamesvr/Dockerfile && \
     rm -f /gamesvr/.dockerignore
 
-COPY . /gamesvr/
+COPY ./files/ /gamesvr/
 
 WORKDIR /gamesvr
 
