Fixed bad settings

--- a/_lanyware/linux/websvr-content.lan/Dockerfile
+++ b/_lanyware/linux/websvr-content.lan/Dockerfile
@@ -2,7 +2,7 @@ FROM nginx
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV HOME="/usr/share/nginx/html/" SERVER_NAME="ll/gamesvr-tf2"
+ENV HOME="/usr/share/nginx/html/" SERVER_NAME="ll/websvr-content.lan"
 
 COPY ./files/ /usr/share/nginx/html/
 
