--- a/_lanyware/linux/websvr-lacledes.lan/Dockerfile
+++ b/_lanyware/linux/websvr-lacledes.lan/Dockerfile
@@ -1,20 +1,9 @@
-FROM microsoft/aspnet:latest
+FROM nginx
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV SERVER_MAINTAINER "Laclede's LAN"
-ENV SERVER_NAME "ll/websvr-lacledes.lan"
+ENV HOME="/usr/share/nginx/html/" SERVER_NAME="ll/websvr-lacledes.lan"
 
-COPY . /app/
+COPY ./files/ /usr/share/nginx/html/
 
-#Get and stage from gamesvr GitHub Repo "websvr-lacledes.lan"
-#RUN cd `mktemp -d` && \
-#	git clone git://github.com/LacledesLAN/websvr-lacledes.lan && \
-#	rm -rf *.git && \
-#	cd `ls -A | head -1` && \
-#	rm -f *.md
-#	cp -r * /usr/share/nginx/html/
-
-WORKDIR /app
-
-ENTRYPOINT ["./approot/kestrel"]
+WORKDIR /usr/share/nginx/html/
