--- a/_lanyware/linux/gamesvr-blackmesa/Dockerfile
+++ b/_lanyware/linux/gamesvr-blackmesa/Dockerfile
@@ -2,16 +2,10 @@ FROM ll/gamesvr
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV DEBIAN_FRONTEND="noninteractive" SERVER_NAME="ll/gamesvr-blackmesa" 
+ENV HOME="/gamesvr/blackmesa/" SERVER_NAME="ll/gamesvr-blackmesa" 
 
 COPY ./files/ /gamesvr/blackmesa/
 
-# Install Black Mesa Dedicated Server using SteamCMD
-RUN mkdir -p /gamesvr/blackmesa && \
-    bash /gamesvr/_util/steamcmd/steamcmd.sh +login anonymous +force_install_dir /gamesvr/blackmesa +app_update 570 +quit -validate && \
-    sleep 3 `#Give steamcmd time to any handles to files in /tmp/#`
-
-# Clean out tmp directory
-RUN rm -fr /tmp/* `#Clean out temp directory to save space#`
-
 WORKDIR /gamesvr/blackmesa/
+
+CMD ["/bin/bash"]
