--- a/_lanyware/linux/gamesvr-dods-freeplay/Dockerfile
+++ b/_lanyware/linux/gamesvr-dods-freeplay/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
 ENV HOME="/gamesvr/dods/" SERVER_NAME="ll/gamesvr-dods-freeplay"
 
-COPY ./files/ /gamesvr/csgo/
+COPY ./files/ /gamesvr/dods/
 
 RUN `##Set up container enviorment##` && \
     useradd  -m --home /gamesvr/dods/ gamesvr-dods-freeplay -c "Docker container user for ll/gamesvr-dods-freeplay"
