fixed `-m` to `-M` for useradd commands

--- a/_lanyware/linux/gamesvr-blackmesa-freeplay/Dockerfile
+++ b/_lanyware/linux/gamesvr-blackmesa-freeplay/Dockerfile
@@ -7,7 +7,7 @@ ENV HOME="/gamesvr/blackmesa/" SERVER_NAME="ll/gamesvr-blackmesa-freeplay"
 COPY ./files/ /gamesvr/blackmesa/
 
 RUN `##Set up container enviorment##` && \
-    useradd  -m --home /gamesvr/blackmesa/ gamesvr-blackmesa-freeplay -c "Docker container user for ll/gamesvr-blackmesa-freeplay"
+    useradd -M --home /gamesvr/blackmesa/ gamesvr-blackmesa-freeplay -c "Docker container user for ll/gamesvr-blackmesa-freeplay"
 
 USER gamesvr-blackmesa-freeplay
 
