--- a/_lanyware/linux/gamesvr-csgo-freeplay/Dockerfile
+++ b/_lanyware/linux/gamesvr-csgo-freeplay/Dockerfile
@@ -7,7 +7,7 @@ ENV HOME="/gamesvr/csgo/" SERVER_NAME="ll/gamesvr-csgo-freeplay"
 COPY ./files/ /gamesvr/csgo/
 
 RUN `##Set up container enviorment##` && \
-    useradd  -m --home /gamesvr/csgo/ gamesvr-csgo-freeplay -c "Docker container user for ll/gamesvr-csgo-freeplay"
+    useradd -M --home /gamesvr/csgo/ gamesvr-csgo-freeplay -c "Docker container user for ll/gamesvr-csgo-freeplay"
 
 USER gamesvr-csgo-freeplay
 
