--- a/_lanyware/linux/gamesvr-hl2dm-freeplay/Dockerfile
+++ b/_lanyware/linux/gamesvr-hl2dm-freeplay/Dockerfile
@@ -7,7 +7,7 @@ ENV HOME="/gamesvr/hl2dm/" SERVER_NAME="ll/gamesvr-hl2dm-freeplay"
 COPY ./files/ /gamesvr/hl2dm/
 
 RUN `##Set up container enviorment##` && \
-    useradd  -m --home /gamesvr/hl2dm/ gamesvr-hl2dm-freeplay -c "Docker container user for ll/gamesvr-hl2dm-freeplay"
+    useradd -M --home /gamesvr/hl2dm/ gamesvr-hl2dm-freeplay -c "Docker container user for ll/gamesvr-hl2dm-freeplay"
 
 USER gamesvr-hl2dm-freeplay
 
