--- a/_lanyware/linux/gamesvr-tf2-blindfrag/Dockerfile
+++ b/_lanyware/linux/gamesvr-tf2-blindfrag/Dockerfile
@@ -7,7 +7,7 @@ ENV HOME="/gamesvr/tf2/" SERVER_NAME="ll/gamesvr-tf2-blindfrag"
 COPY ./files/ /gamesvr/tf2/
 
 RUN `##Set up container enviorment##` && \
-    useradd  -m --home /gamesvr/tf2/ gamesvr-tf2-blindfrag -c "Docker container user for ll/gamesvr-tf2-blindfrag"
+    useradd -M --home /gamesvr/tf2/ gamesvr-tf2-blindfrag -c "Docker container user for ll/gamesvr-tf2-blindfrag"
 
 USER gamesvr-tf2-blindfrag
 
