--- a/repos/ll/gamesvr-csgo/Dockerfile.linux
+++ b/repos/ll/gamesvr-csgo/Dockerfile.linux
@@ -1,8 +1,8 @@
-FROM ll/gamesvr:steamcmd
+FROM ll/gamesvr:srcds
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV HOME="/gamesvr/csgo/" SERVER_NAME="ll/gamesvr-csgo" 
+ENV HOME="/gamesvr/csgo/" SERVER_NAME="ll/gamesvr-csgo"
 
 COPY ./files/ /gamesvr/csgo/
 
