--- a/repos/ll/gamesvr-hl2dm/Dockerfile.linux
+++ b/repos/ll/gamesvr-hl2dm/Dockerfile.linux
@@ -1,8 +1,8 @@
-FROM ll/gamesvr:steamcmd
+FROM ll/gamesvr:srcds
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV HOME="/gamesvr/hl2dm/" SERVER_NAME="ll/gamesvr-hl2dm" 
+ENV HOME="/gamesvr/hl2dm/" SERVER_NAME="ll/gamesvr-hl2dm"
 
 COPY ./files/ /gamesvr/hl2dm/
 
